--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Cody Jones",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-runtime": "^7.16.7",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
