--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   "author": "Cody Jones",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -29,6 +30,6 @@
     "style-loader": "^3.3.0",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.7.3"
   }
 }
