--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,8 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "express": "^4.17.2",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
   },
