--- a/firebase.json
+++ b/firebase.json
@@ -5,5 +5,8 @@
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
+  },
+  "hosting": {
+    "public": "web/dist"
   }
 }
